fix in interpolate_r for features of pcf and normalized pcf

--- a/Example.Rmd
+++ b/Example.Rmd
@@ -32,7 +32,7 @@ names(color_complete) = phenotype_complete
 
 fig.prefix.complete = './complete'
 
-r_vec = c(20,100)
+r_vec = c(10)
 
 
 phenotype_simple = list(Macrophage = c("CD163+PDL1-","CD163+PDL1+"),
@@ -85,16 +85,22 @@ plotter_alltypes = T
 plotter = list(plotter_sample, plotter_quadrat, plotter_alltypes)
 
 # Select spatial statistics, or NULL then all inbuild spatial statistics are selected
-selected_spatstat_statistics = NULL # 'ALL', NULL, list('Gdot', 'K')
+selected_spatstat_statistics = list("pcf") # 'ALL', NULL, list('Gdot', 'K') list("G","F", "J","Gdot", "Jdot", "K", "L", "pcf", "Kdot", "Ldot")
 
 # debug
 
 extreme = file.path(base_path,'HO105-083_[16577,32382]_cell_seg_data.txt') # Ma= 95, Ot= 129, Tc= 1, Tu= 732
 extreme = file.path(base_path,'HO105-097_[9517,43652]_cell_seg_data.txt') # Ma= 37, Ot= 198, Tc= 0, Tu= 37
 extreme = file.path(base_path,'HO105-006_[13675,45799]_cell_seg_data.txt') # Ma= 12, Ot= 386, Tc= 2, Tu= 720
-# extreme = file.path(base_path,'HO105-060_[19134,52452]_cell_seg_data.txt') # Ma= 21, Ot= 404, Tc= 3, Tu= 847
+extreme = file.path(base_path,'HO105-060_[19134,52452]_cell_seg_data.txt') # Ma= 21, Ot= 404, Tc= 3, Tu= 847
 # extreme = file.path(base_path,'HO105-062_[11908,48533]_cell_seg_data.txt') # Ma= 7, Ot= 224, Tc= 4, Tu= 1360
 # extreme = file.path(base_path,'HO105-101_[12806,43611]_cell_seg_data.txt') # Ma= 63, Ot= 405, Tc= 5, Tu= 1264
+extreme = file.path(base_path,'HO105-083_[14332,34366]_cell_seg_data.txt') # 541 NA's  Ma =55 Ot=146 Tc=0 Tu=706
+
+# names(features_raw[,'counts_sample_Tcells'][features_raw[,'counts_sample_Tcells'] == 0])
+# View( Tc0 <-features_raw[names(features_raw[,'counts_sample_Tcells'][features_raw[,'counts_sample_Tcells'] == 0]),]) print(dim(Tc0));colSums(is.na(Tc0)) 15
+# names(features_raw[,'counts_sample_Tcells'][features_raw[,'counts_sample_Tumors'] == 0])
+
 # extreme = c(extreme[3],D[8])
 
 # extreme = file.path(base_path, paste0(c(threes_names[1]),'_cell_seg_data.txt'))
@@ -110,8 +116,8 @@ for (file in extreme){
                       r_vec = r_vec, spatstat_statistics = selected_spatstat_statistics)
 }
 
-saveRDS(outputs_auto, file = 'feature_matrix_output.RDS')
-# M = feature_extract(outputs = outputs_auto)
+# saveRDS(outputs_auto, file = 'feature_matrix_output.RDS')
+M = feature_extract(outputs = outputs_auto)
 # write.csv(x = M,file = file.path(fig.prefix.simple, 'feature_matrix.csv'))
 ```
 
